<resources>
    <string name="app_name">dbrah_delivery</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="reservation">Reservations</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="create_your_account_now">create your account now</string>
    <string name="continue1">Continue</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="phone">Phone Number</string>
    <string name="login">Login</string>
    <string name="we_sent_an_code_to_verify_your_phone">We sent an code to verify your phone</string>
    <string name="country_code">Country Code</string>
    <string name="verify">Verify</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="wait">Wait</string>
    <string name="current">Current</string>
    <string name="prev">Previous</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="next">Next</string>
    <string name="notifications">notifications</string>
    <string name="sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="please_enter_code_sent_to">please enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="field_required">field required</string>
    <string name="inv_email">invaled email</string>
    <string name="search">Search...</string>
    <string name="rate_app">Rate App</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="no_reservation_to_show">No reservation to show</string>
    <string name="sorry">Sorry !</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="map_key" />
    <string name="filter">Filter</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="show_results">Show results</string>
    <string name="more">More</string>
    <string name="details">Details</string>
    <string name="book_now">Book now</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="user_blocked">User Blocked</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="user_found">User Found</string>
    <string name="suc">Success</string>
    <string name="all">All</string>
    <string name="no_services_to_show">No services to show</string>
    <string name="cahnge">Change</string>
    <string name="show">Show</string>
    <string name="no_search_result">No search result</string>
    <string name="offers">Offers</string>
    <string name="change">Change</string>
    <string name="cnt_book">You cannot book now</string>
    <string name="choose_language">Change language</string>
    <string name="choose_nationality">Choose nationality</string>
    <string name="choose_town">Choose town</string>
    <string name="welcome_back">welcome Back !</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="user_name">User name</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="nationality">Nationality</string>
    <string name="town">Town</string>
    <string name="id_residence_number">ID / residence number</string>
    <string name="delivery_range">Delivery range</string>
    <string name="you_have_a_specific_provider">You have a specific Provider</string>
    <string name="provider_code">Provider code</string>
    <string name="register">Register</string>
    <string name="last_orders">last Orders</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="new_order">New</string>
    <string name="no_new_order">There are no new orders</string>
    <string name="welcome">Welcome</string>
    <string name="no_current_order">There are no Current Orders</string>
    <string name="order_time">Order Time :</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="map">Map</string>
    <string name="expected_delivery_time">Expected delivery time :</string>
    <string name="order_time2">Order time :</string>
    <string name="order_number">Order number :</string>
    <string name="delivery_details">Delivery details</string>
    <string name="order_products">order Products</string>
    <string name="enter_the_code_that_was_sent_to_the_customer">Enter the code that was sent to the customer</string>
    <string name="please_state_the_reason_for_cancellation">Please state the reason for cancellation</string>
    <string name="write_here">write here ...</string>
    <string name="view_by">View By :</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="status">Status</string>
    <string name="km">km</string>
    <string name="egypt">Egypt</string>
    <string name="saudia">Saudi Arabia</string>
    <string name="pick_up">Picked Up?</string>
    <string name="on_way">On The Way</string>
    <string name="finish_delivery">Successfully delivered</string>
    <string name="end">End </string>
    <string name="accepted">Accepted</string>
    <string name="not_avail_now">Not Available Now</string>
    <string name="attach_sent">an attachment sent</string>
    <string name="type_a_message">Type Here</string>
    <string name="chat">Chat</string>
    <string name="new_client">New Client</string>
    <string name="order_num">Order Nm :</string>
    <string name="new_order1">New Order</string>
    <string name="provider">Provider</string>
    <string name="client">Client</string>
    <string name="dlivery_take">Delivery Take This Order</string>
</resources>