<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="titleno"
    type="String" />
        <variable
            name="lang"
            type="String" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/color1"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/color1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/almaraibold"
            android:text="@string/view_by"
            android:textColor="@color/black2"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/flFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/flFilter" />

        <FrameLayout
            android:id="@+id/flFilter"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_primary"
            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintEnd_toEndOf="@id/view"
            app:layout_constraintTop_toTopOf="@id/view">

            <TextView
                android:id="@+id/tvFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/almira"
                android:text="@string/all"
                android:textColor="@color/white"
                android:textSize="16sp"

                />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="3dp"
                android:src="@drawable/ic_arrow_down"
                app:tint="@color/white" />
        </FrameLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"

            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".uis.activity_home.fragments_home_navigaion.FragmentCurrentReservation">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:id="@+id/llNoData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:src="@drawable/no_order" />

                    <TextView
                        android:id="@+id/tvNoData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/almaraibold"
                        android:text="@{titleno}"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                </LinearLayout>

            </FrameLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <FrameLayout
            android:id="@+id/flFilterDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_primary"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/flFilter"
            app:layout_constraintStart_toStartOf="@id/flFilter"
            app:layout_constraintTop_toBottomOf="@id/flFilter">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbWeek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:fontFamily="@font/almira"
                    android:text="@string/last_week"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:buttonTint="@color/color4" />

                <RadioButton
                    android:id="@+id/rbMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:fontFamily="@font/almira"
                    android:text="@string/last_month"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:buttonTint="@color/color4" />

                <RadioButton
                    android:id="@+id/rbYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:fontFamily="@font/almira"
                    android:text="@string/last_year"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:buttonTint="@color/color4" />

                <RadioButton
                    android:id="@+id/rbAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:checked="true"
                    android:fontFamily="@font/almira"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/all"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:buttonTint="@color/color4" />
            </RadioGroup>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>


</layout>
