<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.apps.dbrah_delivery.model.LoginModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true"
            android:scrollbars="none"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".uis.activity_home.fragments.LoginFragment"

                >

                <FrameLayout
                    android:id="@+id/frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="245dp"
                        android:layout_height="285dp"
                        android:layout_gravity="right"
                        android:background="@drawable/rounded_color1" />

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="200dp"
                        android:layout_height="160dp"
                        android:layout_gravity="center_horizontal|bottom"
                        android:src="@drawable/login" />
                </FrameLayout>

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="79dp"
                    android:fontFamily="@font/almaraibold"
                    android:text="@string/welcome_back"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frame" />

                <FrameLayout
                    android:id="@+id/frame2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/welcome"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="18dp"
                    android:background="@drawable/rounded_grey1_stroke_grey6"
                    >
                    <LinearLayout
                        android:id="@+id/linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <LinearLayout
                            android:id="@+id/llCountry"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:padding="16dp"
                            android:orientation="horizontal"
                            >
                            <ImageView
                                android:id="@+id/imFalg"
                                android:layout_width="26dp"
                                android:layout_height="17dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/flag_sa"/>
                            <TextView
                                android:id="@+id/txtCountry"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_gravity="center_vertical"
                                android:textSize="14sp"
                                android:fontFamily="@font/almira"
                                android:textColor="@color/black2"/>
                            <ImageView
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginStart="16dp"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_arrow_down"/>
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey6"
                            android:layout_marginStart="18dp"
                            android:layout_marginEnd="18dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvPhone" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:padding="16dp"
                            android:orientation="horizontal"
                            >
                            <TextView
                                android:id="@+id/phoneCode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:textSize="15sp"
                                android:textColor="@color/black2"
                                android:fontFamily="@font/almira"/>
                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/black2"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"/>
                            <EditText
                                android:id="@+id/edtPhone"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/transparent"
                                android:hint="@string/phone"
                                android:textSize="15sp"
                                android:fontFamily="@font/almira"
                                android:textColor="@color/black2"
                                android:textColorHint="@color/grey7"/>
                        </LinearLayout>

                    </LinearLayout>

                </FrameLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_primary"
                    android:fontFamily="@font/almira"
                    android:gravity="center"
                    android:minWidth="200dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginTop="35dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/frame2"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

<!--        <FrameLayout-->
<!--            android:id="@+id/flVerification"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@color/black_trans"-->
<!--            android:layout_gravity="center"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->

<!--            android:longClickable="true"-->
<!--            android:visibility="visible">-->

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                app:cardBackgroundColor="@color/white"-->
<!--                app:cardCornerRadius="30dp"-->
<!--                app:cardElevation="2dp">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical"-->
<!--                    android:padding="10dp">-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center_horizontal"-->
<!--                        android:layout_marginTop="30dp"-->
<!--                        android:layout_marginStart="20dp"-->
<!--                        android:layout_marginEnd="20dp"-->
<!--                        android:fontFamily="@font/almira"-->
<!--                        android:text="@string/we_sent_an_code_to_verify_your_phone"-->
<!--                        android:textColor="@color/black2"-->
<!--                        android:textSize="18sp" />-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center_horizontal"-->
<!--                        android:layout_marginTop="5dp"-->
<!--                        android:orientation="horizontal">-->

<!--                        <TextView-->
<!--                            android:layout_width="0dp"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_gravity="center_vertical"-->
<!--                            android:layout_marginStart="5dp"-->
<!--                            android:layout_marginEnd="5dp"-->
<!--                            android:layout_weight="1"-->
<!--                            android:fontFamily="@font/almira"-->
<!--                            android:text="@{model.phone_code}"-->
<!--                            android:textColor="@color/black2"-->
<!--                            android:textSize="16sp" />-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_gravity="center_vertical"-->
<!--                            android:text="@{model.phone}"-->
<!--                            android:fontFamily="@font/almira"-->
<!--                            android:textColor="@color/color13"-->
<!--                            android:textSize="16sp" />-->
<!--                    </LinearLayout>-->

<!--                    <ImageView-->
<!--                        android:layout_width="150dp"-->
<!--                        android:layout_height="150dp"-->
<!--                        android:layout_gravity="center_horizontal"-->
<!--                        android:layout_marginTop="5dp"-->
<!--                        android:src="@drawable/logo_ver" />-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:text="@string/enter_your_verification_code"-->
<!--                        android:textColor="@color/black2"-->
<!--                        android:fontFamily="@font/almaraibold"-->
<!--                        android:textSize="18sp"-->
<!--                        android:layout_gravity="center_horizontal"-->
<!--                        android:layout_marginTop="20dp"-->
<!--                        android:layout_marginStart="20dp"-->
<!--                        android:layout_marginEnd="20dp"/>-->

<!--                    <com.chaos.view.PinView-->
<!--                        android:id="@+id/edtCode"-->
<!--                        style="@style/PinWidget.PinView"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center_horizontal"-->
<!--                        android:layout_marginTop="12dp"-->
<!--                        android:cursorVisible="true"-->
<!--                        android:fontFamily="@font/almaraibold"-->
<!--                        android:inputType="number"-->
<!--                        android:textColor="@color/colorAccent"-->
<!--                        android:textSize="15sp"-->
<!--                        app:cursorColor="@color/colorPrimaryDark"-->
<!--                        app:cursorWidth="2dp"-->
<!--                        app:itemCount="6"-->
<!--                        app:itemHeight="30dp"-->
<!--                        app:itemSpacing="15dp"-->
<!--                        app:itemWidth="30dp"-->
<!--                        app:lineColor="@color/grey11"-->
<!--                        app:lineWidth="2dp"-->
<!--                        app:viewType="line" />-->

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginStart="20dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_marginEnd="20dp">-->

<!--                        <TextView-->
<!--                            android:id="@+id/tvResend"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="@string/resend"-->
<!--                            android:textColor="@color/black"-->
<!--                            android:textSize="15sp"-->
<!--                            android:visibility="gone" />-->

<!--                        <Space-->
<!--                            android:layout_width="0dp"-->
<!--                            android:layout_height="0dp"-->
<!--                            android:layout_weight="1" />-->

<!--                        <TextView-->
<!--                            android:id="@+id/tvCounter"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:text="00:00"-->
<!--                            android:textColor="@color/colorAccent"-->
<!--                            android:textSize="15sp" />-->
<!--                    </LinearLayout>-->

<!--                    <Button-->
<!--                        android:id="@+id/btnConfirm"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center_horizontal"-->
<!--                        android:layout_marginTop="50dp"-->
<!--                        android:background="@drawable/rounded_primary"-->
<!--                        android:minWidth="120dp"-->
<!--                        android:paddingLeft="20dp"-->
<!--                        android:paddingRight="20dp"-->
<!--                        android:text="@string/confirm"-->
<!--                        android:textColor="@color/white"-->
<!--                        android:textSize="15sp"-->

<!--                        />-->

<!--                </LinearLayout>-->

<!--            </androidx.cardview.widget.CardView>-->


<!--        </FrameLayout>-->

    </FrameLayout>
</layout>
